--- a/css/styles.css
+++ b/css/styles.css
@@ -147,9 +147,9 @@ font-size: 3rem;
       list-style: none;
       }
  
-.footerlogo:hover  {
+.footerlogo img:hover  {
    -webkit-transform:scale(1.1);transform:scale(1.1);}
-.footerlogo img{
+.footerlogo img {
    border: solid 1px black;
    border-radius: 180px;
    padding: 5px;
