--- a/css/styles.css
+++ b/css/styles.css
@@ -696,7 +696,7 @@ h1::after,h1::before {
 }
 .divcarrito a h1{
    font-size: 1.5rem;
- 
+}
 .text-center  {
    display: flex;
    flex-direction: column;
