modificaciones varias, logo , responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -428,7 +428,7 @@ h3::before{
    font-style: normal;
    font-weight:bold ;
    font-size: 0.938rem;
-   padding: 4rem;
+   padding: 5rem 0rem;
    justify-content: center;
    text-transform: uppercase;
 
