--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -639,7 +639,7 @@ header{
 .mainmain6{
   display: flex;
   text-decoration: none;
-  color:black;
+  color:red;
   font-family: 'Roboto', sans-serif;  
   font-style: normal;
   font-weight:bold ;
